--- a/CSS.css
+++ b/CSS.css
@@ -11,7 +11,7 @@ h1 span:nth-child(5){color:#4285f4}
 
 
 li {
-  font-size: 20px;
+  font-size: 20px;line-height: 200%;
  }
  ul a:hover{
    color: green;
