--- a/CSS.css
+++ b/CSS.css
@@ -9,16 +9,22 @@ h1 span:nth-child(3){color:#fbbc05}
 h1 span:nth-child(4){color:#34a853}
 h1 span:nth-child(5){color:#4285f4}
 
-
-li {
+ li{
   font-size: 20px;line-height: 200%;
- }
+   }
  ul a:hover{
    color: green;
- }
+   }
  #A{
    font-size: 25px;font-weight: bold;
- }
+   }
  .B{
    font-weight: bold;
- }
+   }
+ h3 {
+   text-align: center;
+   font-size: 35px;
+   }
+ p {
+   line-height: 180%
+   }
