--- a/CSS.css
+++ b/CSS.css
@@ -10,13 +10,21 @@ h1 span:nth-child(4){color:#34a853}
 h1 span:nth-child(5){color:#4285f4}
 
  li{
-  font-size: 20px;line-height: 200%;
-   }
+  font-size: 18px;
+  line-height: 200%;
+  margin: 20px;
+     }
+ ul {
+   height: 80px;
+   display: flex;
+   border-bottom: 3px solid black;
+   margin-top: 5px;
+    }
  ul a:hover{
    color: green;
    }
  #A{
-   font-size: 25px;font-weight: bold;
+   font-size: 18px;font-weight: bold;
    }
  .B{
    font-weight: bold;
@@ -26,5 +34,13 @@ h1 span:nth-child(5){color:#4285f4}
    font-size: 35px;
    }
  p {
-   line-height: 180%
+   display: flex;
+   }
+ .REFERENCE {
+   text-align: center;
+   width: 300px;
+   height: 300px;
+   border: 1px solid black; margin:30px;
+   font-size: 20px;
+
    }
