--- a/CSS.css
+++ b/CSS.css
@@ -45,7 +45,7 @@ h2 span:nth-child(5){color:#4285f4}
    }
  h3 {
    font-size: 30px;
-   font-family: 'Ranchers', cursive;
+   font-family: 'Ranchers';
     }
  .페이지{
    line-height: 2;
